# pledgerepo

./: .gitignore  .npmignore  BENCHMARK.md  CODE_OF_CONDUCT.md  CONNECTION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LIMITATIONS.md  README.md  build.ps1  build.zig  build.zig.zon  deny.toml  dist.toml  package-lock.json  package.json  release.toml  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
.zig-cache/o/3251feedb255b63a4f13024264ecd389/: pledge_native.lib
app/: entry.tsx  index.html  layout.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
app/blog/: page.tsx
app/blog/[slug]/: page.tsx
app/tasks/: page.tsx
crates/adapter-next/: Cargo.toml
crates/adapter-next/src/: lib.rs
crates/adapter-pledgestack/: Cargo.toml
crates/adapter-pledgestack/src/: lib.rs
crates/adapter-react/: Cargo.toml
crates/adapter-react/src/: lib.rs
crates/adapter-solid/: Cargo.toml
crates/adapter-solid/src/: lib.rs
crates/adapter-tanstack/: Cargo.toml
crates/adapter-tanstack/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: git_cache.rs  lib.rs  remote.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: a11y.rs  advanced.rs  analyzer.rs  api.rs  asset_pipeline.rs  bench.rs  budgets.rs  compression.rs  config.rs  config_validate.rs  css_advanced.rs  css_features.rs  css_frameworks.rs  css_in_js.rs  dep_bundler.rs  detect.rs  doctor.rs  drizzle.rs  ecosystem.rs  edge.rs  encrypt.rs  engine.rs  env.rs  favicons.rs  fonts.rs  html.rs  i18n.rs  image_pipeline.rs  lib.rs  lsp_server.rs  migrate.rs  module.rs  module_graph.rs  output_distribution.rs  performance.rs  pipeline.rs  playground.rs  plugin_docs.rs  plugin_registry.rs  plugin_system.rs  (+18 more)
crates/dev-server/: Cargo.toml
crates/dev-server/src/: hmr_diff.rs  lazy_pipeline.rs  lib.rs  middleware.rs  shell_generator.rs  watcher.rs
crates/js-plugin-host/: Cargo.toml
crates/js-plugin-host/src/: lib.rs  test_runner.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: lib.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: lib.rs  vite_compat.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: lib.rs
distribution/homebrew/: pledgepack.rb
distribution/scoop/: pledgepack.json
distribution/winget/: pledgepack.pledgepack.yaml
docs/: ARCHITECTURE.md  ARCHIVE.md  BUILD_SYSTEM.md  CHANGELOG.md  DEV_SERVER.md  GOALS.md  dependencies.md
native-sys/: Cargo.toml  build.rs
native-sys/src/: lib.rs
native-sys/zig/: bench.zig  graph.zig  io.zig  lib.zig  simd.zig
pledgepack/: LICENSE  README.md  index.js  package.json  pledge.json
src/: index.tsx
