[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/cache",
    "crates/resolver",
    "crates/dev-server",
    "crates/optimizer",
    "crates/js-plugin-host",
    "crates/adapter-react",
    "crates/adapter-solid",
    "crates/adapter-next",
    "crates/adapter-tanstack",
    "crates/adapter-pledgestack",
]

[workspace.package]
version = "0.1.8"
edition = "2024"
license = "MIT"
authors = ["pledgepack"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "sync", "signal"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# WebSocket for HMR
tokio-tungstenite = "0.26"

# Oxc for JS/TS/JSX compilation
oxc = { version = "0.36", features = ["parser", "transformer", "codegen", "minifier", "semantic"] }

# Lightning CSS
lightningcss = "1.0.0-alpha.71"

# Hashing (for cache keys)
blake3 = "1"

# Base64 encoding for inline assets
base64 = "0.22"

# Image processing (decode, resize, encode WebP/JPEG/PNG)
image = { version = "0.25", features = ["jpeg", "png", "webp", "gif"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# CLI UX
clap_complete = "4"
indicatif = "0.17"
inquire = "0.7"

# File watching
notify = "8"
notify-debouncer-full = "0.7"

# C library bindings (native file watcher on Linux)
libc = "0.2"

# Parallelism
rayon = "1"
dashmap = "6"

# Global allocator (performance)
mimalloc = "0.1"
tikv-jemallocator = { version = "0.6" }

# Typed UTF-8 paths
camino = "1"

# Fast glob pattern matching
globset = "0.4"

# Regular expression engine
regex = "1"

# Memory-mapped file I/O
memmap2 = "0.9"

# CLI tables
comfy-table = "7"

# YAML parsing
serde_yaml = "0.9"

# Source-context error diagnostics
miette = { version = "7", features = ["fancy"] }

# Man page generation
clap_mangen = "0.2"

# Human-readable file sizes
humansize = "2"

# Diff algorithm for HMR patches
similar = { version = "2", features = ["text"] }

# Cross-platform browser opening
opener = "0.7"

# Local IP address detection for network URL display
local-ip-address = "0.6"

# JSON Schema generation for config validation/IDE support
schemars = "1"

# Pure Rust Sass/SCSS compiler
grass = "0.13"

# TOML parsing
toml = "0.8"

# HTTP client for plugin registry
ureq = { version = "2", features = ["json"] }

# Internal crates
pledgepack-core = { path = "crates/core" }
pledgepack-cache = { path = "crates/cache" }
pledgepack-resolver = { path = "crates/resolver" }
pledgepack-dev-server = { path = "crates/dev-server" }
pledgepack-optimizer = { path = "crates/optimizer" }
pledgepack-js-plugin-host = { path = "crates/js-plugin-host" }
pledgepack-adapter-react = { path = "crates/adapter-react" }
pledgepack-adapter-solid = { path = "crates/adapter-solid" }
pledgepack-adapter-next = { path = "crates/adapter-next" }
pledgepack-adapter-tanstack = { path = "crates/adapter-tanstack" }
pledgepack-adapter-pledgestack = { path = "crates/adapter-pledgestack" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-fast]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16
panic = "unwind"
strip = false

[profile.dev]
opt-level = 0
incremental = true
