[package]
name = "pledgepack-adapter-pledgestack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pledgepack-core = { workspace = true }
