[package]
name = "pledgepack-cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
