[package]
name = "pledgepack-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }

# Oxc for JS/TS/JSX transforms
oxc = { workspace = true }

# Lightning CSS for CSS transforms, minification, CSS modules
lightningcss = { workspace = true }

# Base64 for inline asset encoding
base64 = { workspace = true }

# Image processing (decode, resize, encode)
image = { workspace = true }

# Cache (function-level incremental cache with disk persistence)
pledgepack-cache = { path = "../cache" }

# FFI to Zig native library
pledgepack-native-sys = { path = "../../native-sys" }

# Compression (gzip + brotli)
flate2 = "1"
brotli = "7"

# Serialization for module graph persistence
bincode = { workspace = true }

# Date/time formatting for telemetry dashboard (#101)
chrono = "0.4"

# Fast glob pattern matching
globset = { workspace = true }

# Regular expression engine
regex = { workspace = true }

# Memory-mapped file I/O
memmap2 = { workspace = true }

# CLI tables
comfy-table = { workspace = true }

# File watcher with built-in debouncing
notify-debouncer-full = { workspace = true }
notify = { workspace = true }

# YAML parsing
serde_yaml = { workspace = true }

# Source-context error diagnostics
miette = { workspace = true }

# Human-readable file sizes
humansize = { workspace = true }

# JSON Schema generation for config validation
schemars = { workspace = true }

# Pure Rust Sass/SCSS compiler
grass = { workspace = true }

# TOML parsing
toml = { workspace = true }

# HTTP client for plugin registry
ureq = { workspace = true }
