[package]
name = "pledgepack-dev-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
pledgepack-core = { workspace = true }
pledgepack-native-sys = { path = "../../native-sys" }
oxc = { workspace = true }
reqwest = "0.12"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
futures-util = "0.3"
