[package]
name = "pledgepack-dev-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true, features = ["compression-gzip", "fs", "trace"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
pledgepack-core = { workspace = true }
pledgepack-js-plugin-host = { workspace = true }
pledgepack-native-sys = { path = "../../native-sys" }
oxc = { workspace = true }
reqwest = "0.12"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
futures-util = "0.3"
similar = { workspace = true }
opener = { workspace = true }
local-ip-address = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Threading", "Win32_Security"] }
bytemuck = "1.21"

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
