[package]
name = "pledgepack-js-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
boa_engine = "0.20"
pledgepack-core = { workspace = true }
